Committer: Kevin Chambers <kchambers@rideconnection.org> Added database.yml to .gitignore Added pg to Gemfile Added a template database.yml for Postgres Upgraded to Rails 3.03 in Gemfile

--- a/config/database_pg_template.yml
+++ b/config/database_pg_template.yml
@@ -2,7 +2,7 @@
 common: &common
   adapter: postgresql
   username: lowdown
-  password: lowdown
+  password: password
 
 development:
   <<: *common
