--- a/test/fixtures/runs.yml
+++ b/test/fixtures/runs.yml
@@ -2,8 +2,9 @@
 
 one:
   date: 2010-11-17
-  routematch_share_id: 1
+  name: "George Friday"
+  routematch_id: 1
 
 two:
   date: 2010-11-17
-  routematch_share_id: 1
+  routematch_id: 2
