--- a/test/fixtures/projects.yml
+++ b/test/fixtures/projects.yml
@@ -1,7 +1,8 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 one:
-  name: MyString
+  id: 1
+  name: Project 1
   funding_source: MyString
   funding_subsource: MyString
   project_number: MyString
