--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,7 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-testuser:
-  name: user
+admin:
   email: user@example.com
-  login_count: 4
   level: 100
-  crypted_password: xx
-  persistence_token: xx
+  encrypted_password: xx
+  remember_token: xx
