Update .gitignore to ignore secrets

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 rm_export.csv
 *.swp
 .bundle
-config/database.yml
-config/app_config.yml
 db/*.sqlite3
 log/*.log
 tmp/**/*
@@ -10,3 +8,7 @@ tmp/*
 *~
 .DS_store
 tags
+
+config/secrets.yml
+config/database.yml
+config/app_config.yml
